--- a/src/App.css
+++ b/src/App.css
@@ -20,7 +20,7 @@
   justify-content: space-between;
   align-items: center;
 
-  background-image: url('/flag.svg');
+  background-image: url('/flag.webp');
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
